--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  provider: ^6.1.2
-  google_nav_bar: ^5.0.6
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
